[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/players/player4.png" type="Texture" id=1]
[ext_resource path="res://Assets/players/player3.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player2.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Shot2.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 5.89405

[node name="Player2" type="Area2D" groups=[
"player",
]]
position = Vector2( 43.6535, 25.3984 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.25254, 0.0834274 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.35
autostart = true

[node name="Shot2" parent="." instance=ExtResource( 4 )]
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
